# croaring-rs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  justfile  roaring.c  roaring.h  roaring_fast_or.c
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: benches.rs  performance_comparison.rs
croaring/: CHANGELOG.md  Cargo.toml
croaring-sys/: CHANGELOG.md  Cargo.toml  build.rs
croaring-sys/CRoaring/: bindgen_bundled_version.rs  roaring.c  roaring.h  roaring.hh
croaring-sys/src/: lib.rs
croaring/benches/: benches.rs  performance_comparison.rs
croaring/proptest-regressions/: lib.txt
croaring/src/: callback.rs  lib.rs  rust_alloc.rs  serialization.rs
croaring/src/bitmap/: imp.rs  iter.rs  lazy.rs  mod.rs  ops.rs  serialization.rs  view.rs
croaring/src/bitmap64/: imp.rs  iter.rs  mod.rs  ops.rs  serialization.rs  view.rs
croaring/src/bitset/: imp.rs  iter.rs  mod.rs  ops.rs
croaring/src/rust_alloc/: custom_alloc.rs  global_alloc.rs  mod.rs
croaring/src/treemap/: imp.rs  iter.rs  mod.rs  ops.rs  serialization.rs  util.rs
croaring/tests/: lib.rs  roaring64.rs
croaring/tests/data/: .gitignore  create_serialization.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: against_bitvec.rs  deserialize.rs  deserialize64.rs  fuzz_ops.rs  fuzz_ops64.rs
fuzz/fuzz_targets/arbitrary_ops/: mod.rs
fuzz/fuzz_targets/arbitrary_ops64/: mod.rs
src/: imp.rs  iter.rs  lib.rs  ops.rs
src/bitmap/: imp.rs  iter.rs  mod.rs  ops.rs
src/treemap/: imp.rs  iter.rs  mod.rs  ops.rs  serialization.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: lib.rs
tests/data/: README.md
