[package]
name = "croaring"
version = "0.3.2"
authors = ["Saulius Grigaliunas <saulius@ninja.lt>"]
license = "Apache-2.0"
description = "Rust wrapper for CRoaring"
repository = "https://github.com/saulius/croaring-rs.git"
readme = "README.md"
keywords = ["RoaringBitmap", "croaring", "bitmap"]
documentation = "https://docs.rs/croaring"

[dev-dependencies]
quickcheck = "0.4.1"
rand = "0.3"
roaring = "0.5.2"

[dependencies]
libc = "0.2.42"
croaring-sys = { path = "croaring-sys", version = "0.3.1" }
