[package]
name = "croaring-sys"
version = "1.1.0"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
documentation = "https://docs.rs/croaring-sys"
build = "build.rs"
description = "Raw bindings to CRoaring"

[features]
default = []
# This feature is now a no-op, but we keep it for backwards compatibility
# pre-built bindgen is _always_ used
buildtime_bindgen = []

[lib]
doctest = false

[dependencies]

[build-dependencies]
cc = "1"
