[package]
name = "croaring-sys"
version = "1.0.0"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
documentation = "https://docs.rs/croaring-sys"
build = "build.rs"
description = "Raw bindings to CRoaring"

[features]
default = []
buildtime_bindgen = ["bindgen"]

[lib]
doctest = false

[dependencies]

[build-dependencies]
cc = "1"
bindgen = { version = "0.68", optional = true, default-features = false, features = ["runtime"] }
