[package]
name = "croaring-sys"
version = "4.3.1"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
documentation = "https://docs.rs/croaring-sys"
build = "build.rs"
description = "Raw bindings to CRoaring"
categories = ["no-std::no-alloc", "external-ffi-bindings", "data-structures"]

[features]
default = []

[lib]
doctest = false

[dependencies]

[build-dependencies]
cc = "1.1"
