[package]
name = "croaring"
version = "1.1.0"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
description = "Rust wrapper for CRoaring"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
keywords = ["RoaringBitmap", "croaring", "bitmap"]
documentation = "https://docs.rs/croaring"

[features]
default = []
# This feature is now a no-op, but we keep it for backwards compatibility
# pre-built bindgen is _always_ used
buildtime_bindgen = []

[dev-dependencies]
proptest = "1"
roaring = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
ffi = { package = "croaring-sys", path = "../croaring-sys", version = "2.0.0" }
byteorder = "1.4.3"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "performance_comparison"
harness = false
