[package]
name = "croaring"
version = "2.3.1"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
description = "Rust wrapper for CRoaring"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
keywords = ["RoaringBitmap", "croaring", "bitmap"]
categories = ["data-structures", "api-bindings", "no-std::no-alloc"]
documentation = "https://docs.rs/croaring"

[features]
default = ["std"]
# Include alloc to get features that depend on an allocator (treemap, serializing to vec, etc)
# enabled by default
alloc = []

std = ["alloc"]

[dev-dependencies]
proptest = "1"
roaring = "0.10"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
ffi = { package = "croaring-sys", path = "../croaring-sys", version = "4.3.4" }

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "performance_comparison"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
