[package]
name = "croaring"
version = "2.5.0"
edition = "2021"
authors = ["croaring-rs developers"]
license = "Apache-2.0"
description = "Rust wrapper for CRoaring"
repository = "https://github.com/RoaringBitmap/croaring-rs.git"
readme = "../README.md"
keywords = ["RoaringBitmap", "croaring", "bitmap"]
categories = ["data-structures", "api-bindings", "no-std::no-alloc"]
documentation = "https://docs.rs/croaring"

[features]
default = ["std", "allocator-api2"]
# Include alloc to get features that depend on an allocator (treemap, serializing to vec, etc)
# enabled by default
alloc = []

std = ["alloc", "allocator-api2?/std"]

allocator-api2 = ["dep:allocator-api2"]

[dev-dependencies]
proptest = "1"
roaring = "0.11"
criterion = { version = "0.7", features = ["html_reports"] }

[dependencies]
# Support for allocators that use allocator-api2
allocator-api2 = { version = "0.3.0", optional = true, default-features = false, features = ["alloc"] }
ffi = { package = "croaring-sys", path = "../croaring-sys", version = "4.4.0" }

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "performance_comparison"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
