[package]
name = "croaring-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
bitvec = "1.0.1"

croaring = { path = "../croaring" }


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_ops"
path = "fuzz_targets/fuzz_ops.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ops64"
path = "fuzz_targets/fuzz_ops64.rs"
test = false
doc = false

[[bin]]
name = "against_bitvec"
path = "fuzz_targets/against_bitvec.rs"
test = false
doc = false

[[bin]]
name = "deserialize"
path = "fuzz_targets/deserialize.rs"
test = false
doc = false

[[bin]]
name = "deserialize64"
path = "fuzz_targets/deserialize64.rs"
test = false
doc = false
